# csv-writer

./: .gitignore  2ndmain.cpp  CMakeLists.txt  mainmain.h  winmain.cpp
assets/gamespecific/png/: ui_elems.png~
assets/gamespecific/png/frogHop/: frogsprite1x2.png~
assets/shaders/: color.fs  rotation.vs  simple.fs  simple.vs  write.fs  write.vs
classes/gameSpecific/scene/: CSVMainMenu.cpp  CSVMainMenu.h  DelimSet.cpp  DelimSet.h  Editor.cpp  Editor.h  EntitySet.cpp  EntitySet.h  Export.cpp  Export.h  StringEditor.cpp  StringEditor.h  defeatScreen.h  frogHop.cpp  frogHop.h  graphicOptions.cpp  graphicOptions.h  keyOptions.cpp  keyOptions.h  mainMenu.h  pauseMenu.cpp  pauseMenu.h  soundOptions.h
classes/scene/: scene.h
classes/singleton/: dataHolder.cpp  dataHolder.h  gl_core.h  staticDraw.cpp  staticDraw.h  staticFile.cpp  staticFile.h  staticInput.cpp  staticInput.h  staticSound.cpp  staticSound.h  staticWrite.cpp  staticWrite.h
lib/linux/freetype/include/freetype/config/: ftoption.h
lib/shared/: glad.c
lib/shared/include/glad/: glad.h
licenses/BGL/: BGLLicense.txt
licenses/GLFW/: LICENSE.md
licenses/csvwriter/: csvwriterlicense.txt
licenses/glad/: LICENSE.txt
licenses/khr/: license.txt
licenses/miniaudio/: license.txt
licenses/tinyfiledialogues/: tdf_license.txt
utilClasses/: uiHelper.h  util.h  vectorFUtil.h
